# ComandlineGui

./: CMakeLists.txt  base_command.h  cd_command.cpp  cd_command.h  chmod_command.cpp  chmod_command.h  command_fabric.cpp  command_fabric.h  csvparser.cpp  csvparser.h  exit_command.cpp  exit_command.h  file_data.cpp  file_data.h  help_command.cpp  help_command.h  ls_command.cpp  ls_command.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  rmdir_command.cpp  rmdir_command.h  script_reader.cpp  script_reader.h  tail_command.cpp  tail_command.h  tree.cpp  tree.h  tree_command.cpp  tree_command.h
